--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dependencies": {
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
-        "express": "~4.16.1"
+        "express": "~4.16.1",
+        "multer": "^1.4.4"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.2",
-        "@types/express": "^4.17.13"
+        "@types/express": "^4.17.13",
+        "@types/multer": "^1.4.7"
     }
 }
