--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
         "express": "~4.16.1",
+        "fuzzyset": "^1.0.7",
         "multer": "^1.4.4"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.2",
         "@types/express": "^4.17.13",
+        "@types/fuzzyset": "^1.0.4",
         "@types/multer": "^1.4.7"
     }
 }
