--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
         "debug": "~2.6.9",
         "express": "~4.16.1",
         "fuzzyset": "^1.0.7",
-        "multer": "^1.4.4"
+        "image-size": "^1.0.1",
+        "multer": "^1.4.4",
+        "node-fetch": "^2.6.7"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.2",
         "@types/express": "^4.17.13",
         "@types/fuzzyset": "^1.0.4",
-        "@types/multer": "^1.4.7"
+        "@types/multer": "^1.4.7",
+        "@types/node-fetch": "^2.5.12"
     }
 }
