--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "fuzzyset": "^1.0.7",
         "image-size": "^1.0.1",
         "multer": "^1.4.4",
-        "node-fetch": "^2.6.7"
+        "node-fetch": "^2.6.7",
+        "node-html-parser": "^5.2.0"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.2",
