--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
-        "canvas": "^2.9.1",
+        "canvas": "^2.10.1",
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
         "express": "~4.16.1",
         "fuzzyset": "^1.0.7",
         "image-size": "^1.0.1",
-        "multer": "^1.4.4",
+        "multer": "^1.4.5-lts.1",
         "node-fetch": "^2.6.7",
         "node-html-parser": "^5.2.0"
     },
